Fixed issue with toggle class getting stuck

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 #drumBoard {
-    width: 1300px;
+    width: 100%;
     height: 200px;
     position: absolute;
     margin: auto;
@@ -23,12 +23,13 @@ h1 {
 
 .key {
     display: inline-block;
-    margin-top: 26px;
+    margin: 26px 0 0 0;
     text-align: center;
+    transition: all .07s;
 }
 
 img {
-    width: 125px;
+    width: 150px;
 }
 
 p {
@@ -41,4 +42,8 @@ p {
     position: relative;
     bottom: 20px;
     margin: 0;
+    filter: hue-rotate(133deg);
+    transform: scale(1.2);
+    box-shadow: red;
+    transition: all .15s;
 }
